problems 1 with images

--- a/template 05 homework/homeworkset1.tex
+++ b/template 05 homework/homeworkset1.tex
@@ -26,6 +26,7 @@ extendedchars=true
 \pagestyle{empty}
 
 \renewcommand{\thefootnote}{\fnsymbol{footnote}}
+\usepackage{graphicx}
 
 \begin{document}
 
@@ -120,7 +121,21 @@ The following git commands were used for this exercise:
 \newline
  git commit -m "D"
 
+\begin{figure}[h]
+    \begin{center}
+        \includegraphics[width=\textwidth]{Hw1Map.jpg}
+    \end{center}
+    \caption{Master and branch}
+    \label{fig:Hw1Map}
+\end{figure}
 
+\begin{figure}[h]
+    \begin{center}
+        \includegraphics[width=\textwidth]{AltMap.jpg}
+    \end{center}
+    \caption{Alt Branch}
+    \label{fig:Hw1Map}
+\end{figure}
 
 
 
