Proposal 1 added to problem 3

--- a/template 05 homework/homeworkset1.tex
+++ b/template 05 homework/homeworkset1.tex
@@ -221,7 +221,17 @@ in your model, is the preamble part of \texttt{main.tex} an endogenous
 or exogenous variable?  
 Note also that in addition to this issue, there are other issues that
 you are to consider.  So, \emph{be sure to consult IMM}. 
+\paragraph {Proposal 1:}
 
+ In this mechanism each student pushes their files onto their github.com account. Student B pulls from A and Student C pulls from B. Finally, Student D pulls from Student C. This allows for the files to merge without any additional copies being made. In addition, if the specific order is kept then the report will be in order and no further rearrangements will be required. 
+\newline
+There is much strength to this mechanism. First, when the files are pulled by each student they are in order. Second, the probability of getting extra copies is at a minimum. There are some weaknesses, however. First, each student must be finished with their segment of the report before the next student can pull the file. The fact that the transfer of files must be in that specific order also makes the process less flexible. For example, A must be done before B, B must be done before C and C must be done before D. Another problem occurs with editing. For example, say that A wanted to change something in their section of the report. According to the mechanism, all the students would have to redo the entire process. This takes time and effort.
+\newline
+To test this we can perform a short simulation. Since I am only one person, it is tedious to establish four new accounts and act as each student. Instead, what I will do is I will use the poem exercise we did in class and act as each student. The first step is to assign a stanza to each student. For example, A will be stanza 1, B will be stanza 2, C will be stanza 3 and D will stanza 4. As B I pull stanza 2 first. I then pull stanza 1 (A) and resolve the conflict. Next, I act as student C so I pull stanza 3. As student C I pull the file from B, which basically contains the file from A and B. As student C, I resolve the conflict. The same applies when I act as student D. We find that the simulation shows that the proposal works, however, it is tedious. 
+ 
+
+\paragraph {Meechanism 2: }
+Each student can push their files to one master directory. The files are then merged and the conflict is resolved by one person. This is a good idea because there will be no specific order or extra copies made in the process. 
 \vskip0.25in
 \noindent\textbf{Problem 4 (aka.\ Fair Play, 40 pts):}
 Answer the following question:
