--- a/template 02 presentation/presentation.tex
+++ b/template 02 presentation/presentation.tex
@@ -6,8 +6,8 @@
 \let\olditem\item
 \renewcommand{\item}{\setlength{\itemsep}{0.5\baselineskip}\olditem}
 
-\usetheme{Singapore}
-\usecolortheme{lily}
+\usetheme{Warsaw}
+\usecolortheme{default}
 \usefonttheme[onlymath]{serif}
 
 \usepackage{float}
@@ -40,19 +40,20 @@
 \setbeamertemplate{footline}[frame number]
 \beamertemplateshadingbackground{blue!5}{yellow!10}
 
-\title{{\color{blue} \LARGE 550.400: Mathematical Modeling and Consulting\newline} }
+\title{{\color{yellow} \LARGE Modeling the Sociodynamics of Applause\newline} }
 
-\subtitle{{\color{red} \large Lecture Notes} }
+\subtitle{{\color{white} \large Midterm Presentation} }
 
 \author{ 
 %    \vspace{5pt}
-    {\bf{Instructor:}} \\ 
-Dr.~N.~H.~Lee \\ 
+    {\bf{Participants:}} \\ 
+Ahmed~Aly \\ 
     \vspace{5pt}
 } 
-\institute{JHU AMS 2012 FALL}
+\institute{{Department of Applied Mathematics and Statistics}\\
+{Department of Sociology}}
 
-\date{\mygreen Last Complied on \today} 
+\date{\mygreen  \today} 
 
 \begin{document}
 
