Pictures of Congress and State of the Union added

--- a/template 02 presentation/presentation.tex
+++ b/template 02 presentation/presentation.tex
@@ -38,7 +38,7 @@
 
 \setbeamertemplate{navigation symbols}{} %gets rid of navigation symbols
 \setbeamertemplate{footline}[frame number]
-\beamertemplateshadingbackground{blue!5}{yellow!10}
+\beamertemplateshadingbackground{yellow!10}{green!5}
 
 \title{{\color{yellow} \LARGE Modeling the Sociodynamics of Applause\newline} }
 
@@ -66,11 +66,37 @@ Ahmed~Aly \\
     \tableofcontents
 \end{frame}
 
-\section{Preliminaries}
+\section{Problem Description}
 
 \begin{frame}
-    \frametitle{Example: Insurance Redlining}
-    Frequently Recurring Elements of doing a Project in Industry:
+
+
+\begin{figure}[h]
+    \begin{center}
+        \includegraphics[width=\textwidth]{../images/congress.jpg}
+    \end{center}
+    \caption{}
+    \label{fig:congress}
+\end{figure}
+
+\end{frame}
+
+\begin{frame}
+\begin{figure}[h]
+    \begin{center}
+        \includegraphics[width=\textwidth]{../images/state_union.jpg}
+    \end{center}
+    \caption{}
+    \label{fig:stateunion}
+\end{figure}
+
+\end{frame}
+
+
+
+\begin{frame}
+    \frametitle{Getting People on the Bandwagon!}
+    Measuring Approval and Acceptance:
     \vspace{7pt}
              \begin{enumerate}
                  \item Work Statement
