--- a/template 02 presentation/presentation.tex
+++ b/template 02 presentation/presentation.tex
@@ -50,8 +50,8 @@
 Ahmed~Aly \\ 
     \vspace{5pt}
 } 
-\institute{{Department of Applied Mathematics and Statistics}\\
-{Department of Sociology}}
+\institute{{Department of Applied Mathematics and Statistics, Johns Hopkins University}\\
+{Department of Sociology, Johns Hopkins University}}
 
 \date{\mygreen  \today} 
 
@@ -75,22 +75,52 @@ Ahmed~Aly \\
     \begin{center}
         \includegraphics[width=\textwidth]{../images/congress.jpg}
     \end{center}
-    \caption{}
+    \caption{Congress}
     \label{fig:congress}
 \end{figure}
 
 \end{frame}
+
 
 \begin{frame}
 \begin{figure}[h]
     \begin{center}
         \includegraphics[width=\textwidth]{../images/state_union.jpg}
     \end{center}
-    \caption{}
+    \caption{State of the Union}
     \label{fig:stateunion}
 \end{figure}
 
 \end{frame}
+
+
+
+\begin{frame}
+   \frametitle{Value and Application}
+    Ideally, the Model:
+    \vspace{7pt}
+	\begin{enumerate}
+		\item Measures approval/acceptance of subject
+		\item Can be applied to get a create a full blown applause
+		\item Describes the transfer of ideas and the rate of approval
+	\end{enumerate}	
+\end{frame}
+
+\begin{frame}
+  \frametitle{Meet the Sponsors}
+   Because the project is in research phase the sponsors have been chosen to be in an academic setting
+	\begin{enumerate}
+		\item Department of Applied and Mathematics and Statistics at JHU\newline \newline
+	is well known for its multi-faceted and verastile research as well as its industrial connections		
+		\item Department of Sociology at JHU\newline \newline
+	is well known for its research in group psychology, social interactions, and group dynamics
+	\end{enumerate} 
+\vspace{7pt}
+
+Once a primitive model is produced more industrial sponsors such as google, facebook, HBO, etc. can be added.
+
+\end{frame}
+
 
 
 
