--- a/template 02 presentation/presentation.tex
+++ b/template 02 presentation/presentation.tex
@@ -121,7 +121,61 @@ Once a primitive model is produced more industrial sponsors such as google, face
 
 \end{frame}
 
+\section{Deliverables}
 
+\begin{frame}
+   \frametitle{Goals}
+   The main goal is to model the dynamics applause in an audience and to establish the critical mass needed to start a full blown applause.\newline\newline
+ Deliverables:
+ \vspace{7pt}
+	\begin{enumerate}
+		\item A simple model of the individual,
+		\item An integrated model of the crowd,
+		\item A simulation to demostrate behavior given parameter changes,
+		\item Technical reports and presentations summarizing the work.
+	\end{enumerate}
+
+
+
+\end{frame}
+
+
+\section {Mathematical Background and Related Work}
+
+\begin{frame}
+  \frametitle{Related Work}
+	\begin{enumerate}
+		\item Diffusion of Innovations by Everett Rogers \newline\newline
+		Details the behavior and adoption of innovations and categorizes adopters.
+\begin{figure}[h]
+    \begin{center}
+        \includegraphics[width=\textwidth]{../images/DiffusionOfInnovation.png}
+    \end{center}
+    \caption{Categories of Innovativeness}
+    \label{diffusion}
+\end{figure}
+	\end{enumerate}
+\end{frame} 
+
+\begin{frame}
+  \frametitle{Key Observations}
+	\begin{enumerate}
+		\item Members in the crowd are compelled to clap if crowd is clapping,
+		\item The greater the intensity and duration of applause the greater the approval,
+		\item After a full blown applause, there is a wait period in which clapping would be too late and full applause can not be generated,
+		\item Willingness of individual members to clap depends on percieved intensity, stimulus, emotional state, and resistance to the crowd, 
+	\end{enumerate}
+
+\end{frame}
+
+\begin{frame}
+   \frametitle{Key Assumptions}
+	\begin {enumerate}
+		\item Stimulus (speech, opinion, performance, etc.)  is average and constant,
+		\item Clapping is only a result of a positive response other reasons are disregarded,
+		\item Psychological state of individual is stochastic
+	\end{enumerate}	
+\end{frame}
 
 
 \begin{frame}
