--- a/template 02 presentation/presentation.tex
+++ b/template 02 presentation/presentation.tex
@@ -100,9 +100,9 @@ Ahmed~Aly \\
     Ideally, the Model:
     \vspace{7pt}
 	\begin{enumerate}
-		\item Measures approval/acceptance of subject
-		\item Can be applied to get a create a full blown applause
-		\item Describes the transfer of ideas and the rate of approval
+		\item Measures approval/acceptance of subject,\newline
+		\item Can be applied to get a create a full blown applause,\newline
+		\item Describes the transfer of ideas and the rate of approval,\newline
 	\end{enumerate}	
 \end{frame}
 
@@ -117,7 +117,7 @@ Ahmed~Aly \\
 	\end{enumerate} 
 \vspace{7pt}
 
-Once a primitive model is produced more industrial sponsors such as google, facebook, HBO, etc. can be added.
+Once a model is produced more industrial sponsors such as google, facebook, HBO, etc. can be added.
 
 \end{frame}
 
@@ -160,10 +160,10 @@ Once a primitive model is produced more industrial sponsors such as google, face
 \begin{frame}
   \frametitle{Key Observations}
 	\begin{enumerate}
-		\item Members in the crowd are compelled to clap if crowd is clapping,
-		\item The greater the intensity and duration of applause the greater the approval,
-		\item After a full blown applause, there is a wait period in which clapping would be too late and full applause can not be generated,
-		\item Willingness of individual members to clap depends on percieved intensity, stimulus, emotional state, and resistance to the crowd, 
+		\item Members in the crowd are compelled to clap if crowd is clapping,\newline
+		\item The greater the intensity and duration of applause the greater the approval,\newline
+		\item After a full blown applause, there is a wait period in which clapping would be too late and full applause can not be generated,\newline
+		\item Willingness of individual members to clap depends on percieved intensity, stimulus, emotional state, and resistance to the crowd.
 	\end{enumerate}
 
 \end{frame}
@@ -171,13 +171,38 @@ Once a primitive model is produced more industrial sponsors such as google, face
 \begin{frame}
    \frametitle{Key Assumptions}
 	\begin {enumerate}
-		\item Stimulus (speech, opinion, performance, etc.)  is average and constant,
-		\item Clapping is only a result of a positive response other reasons are disregarded,
+		\item Stimulus (speech, opinion, performance, etc.)  is average and constant,\newline
+		\item Clapping is only a result of a positive response other reasons are disregarded,\newline
 		\item Psychological state of individual is stochastic
 	\end{enumerate}	
 \end{frame}
 
+\section{Approach}
+\begin{frame}
+\frametitle{First Objective}
+We will model individual as a open loop system.\newline\newline
+3 factors to consider: \newline
+	\begin{enumerate}
+		\item mood (happy, sad, angry, etc.),\newline \newline
+		\item resistance and connectivity with the crowd,\newline\newline
+		\item social inhibition.		
+	\end{enumerate}
+\end{frame}
 
+\begin{frame}
+\frametitle{First Objective}
+Let $N$ be the population that claps, $I$ be intensity and $T$ be duration then we can think of the individual as:\newline\newline\newline
+
+\begin{figure}[h]
+    \begin{center}
+        \includegraphics[width=\textwidth]{../images/Indivi.jpg}
+    \end{center}
+    \caption{Scheme of the Individual}
+    \label{fig:individual}
+\end{figure}
+
+
+\end{frame}
 \begin{frame}
     \frametitle{Getting People on the Bandwagon!}
     Measuring Approval and Acceptance:
