--- a/template 02 presentation/presentation.tex
+++ b/template 02 presentation/presentation.tex
@@ -201,8 +201,16 @@ Let $N$ be the population that claps, $I$ be intensity and $T$ be duration then 
     \label{fig:individual}
 \end{figure}
 
-
 \end{frame}
+
+\begin{frame}
+\frametitle{Second Objective}
+The second objective is to integrate the indivual models to examine the behavior of the population.\newline \newline
+The critical mass/threshold needed to start a full-blown applause will be determined.
+\end{frame}
+
+
+
 \begin{frame}
     \frametitle{Getting People on the Bandwagon!}
     Measuring Approval and Acceptance:
