--- a/template 02 presentation/presentation.tex
+++ b/template 02 presentation/presentation.tex
@@ -209,76 +209,78 @@ The second objective is to integrate the indivual models to examine the behavior
 The critical mass/threshold needed to start a full-blown applause will be determined.
 \end{frame}
 
-
+\begin{frame}
+\frametitle{Simulation}
+The simulation will be coded using Matlab with R documentation 
+\end{frame}
 
 \begin{frame}
-    \frametitle{Getting People on the Bandwagon!}
-    Measuring Approval and Acceptance:
-    \vspace{7pt}
-             \begin{enumerate}
-                 \item Work Statement
-                 \item Midterm Presentation
-                 \item Progress Report
-                 \item Final Presentation
-                 \item Final Report
+\frametitle{Time Permitted}
+If time permits we will examine recordings of speeches, performances, etc. We will determine the average intensity of a clap.\\
+\end{frame}
+
+\section{Milestones}
+\begin{frame}
+\frametitle{Milestones}
+Milestones
+\begin{enumerate}
+                 \item Work Statement, Sep 28,2012,
+                 \item Midterm Presentation, Oct 17,2012,
+                 \item Progress Report, Oct 26,2012,
+                 \item Final Presentation, Nov 6,2012,
+                 \item Final Report, Nov 30,2012.
              \end{enumerate}
+
+\end{frame}
+\section{Recap}
+\begin{frame}
+\frametitle{ Deliverables}
+ Deliverables:
+ \vspace{7pt}
+	\begin{enumerate}
+		\item A simple model of the individual,
+		\item An integrated model of the crowd,
+		\item A simulation to demostrate behavior given parameter changes,
+		\item Technical reports and presentations summarizing the work.
+	\end{enumerate}
+\end{frame}
+\section{Future Steps}
+\begin{frame}
+
+  \frametitle{To be Done (Objectives):}
+	\begin{enumerate}
+		\item Derive a function from observations for individual models,
+		\item Derive a function that integrates individual models,
+		\item Integrate models,
+		\item Algorithm for simulation.
+	\end{enumerate}
 \end{frame}
 
 \begin{frame}
-    \frametitle{Programmings in this class}
-    \begin{enumerate}
-        \item \LaTeX: 
-            \begin{enumerate}
-                \item \texttt{moderncv}
-                \item \texttt{beamer}
-                \item \texttt{article}
-                \item \texttt{tikz}
-            \end{enumerate}
-        \item R:
-            \begin{enumerate}
-                \item \texttt{tikzDevice}
-                \item \texttt{lm}
-            \end{enumerate}
-        \item Git
-            \begin{enumerate}
-                \item \texttt{git init .}
-            \end{enumerate}
-    \end{enumerate}
+  \frametitle{To be Done (Deliverables):}
+	\begin{enumerate}
+	      \item Progress Report, Oct 26,2012,
+                 \item Final Presentation, Nov 6,2012,
+                 \item Final Report, Nov 30,2012.	
+	\end{enumerate}
 \end{frame}
-
-\section{Principles}
-\begin{frame}
-    \frametitle{Seven Basic Principles}
-     \begin{enumerate}
-         \item Set the context 
-         \item Choose effective examples and analogies
-         \item Choose vocabulary to suit your readers
-         \item Decide whether to present \#s in text, tables, or figures
-         \item Report and interpret \#s in the text
-         \item Specify the direction \emph{and} size of an association between variables
-         \item For many \#s, summarize overall pattern 
-     \end{enumerate}
-\end{frame}
-
-\section{Tools}
-\begin{frame}
-    \frametitle{Creating Effective Tables}
-\end{frame}
-
-\section{Arguments from Scale}
 
 \begin{frame}
-    \frametitle{Example: Cost of Packaging}
+  \frametitle{Future Steps}
+	\begin {enumerate}
+		\item Get feedback
+		\item Establish Individual Model
+	\end{enumerate}
 \end{frame}
 
-\section{Graphical Methods}
 \begin{frame}
-    \frametitle{Example: The Nuclear Mission Arms Race}
+\vspace{20pt}
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~THANK YOU
 \end{frame}
 
-\section{Basic Optimization}
-\begin{frame}
-    \frametitle{Example: Maintaining Inventory}
-\end{frame}
+
+
+
+
 
 \end{document}
