--- a/template 02 presentation/presentation.tex
+++ b/template 02 presentation/presentation.tex
@@ -278,7 +278,13 @@ Milestones
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~THANK YOU
 \end{frame}
 
-
+%\begin{frame}[allowframebreaks]{Bibliography}
+%	\frametitle{References}
+%\bibliographystyle{plain}
+%\renewcommand\bibname{Selected Bibliography Including Cited Works}
+%\nocite{*}
+%\bibliography{biblio}
+%\end{frame}
 
 
 
