--- a/template 02 presentation/presentation.tex
+++ b/template 02 presentation/presentation.tex
@@ -21,6 +21,7 @@
 \usepackage{comment}
 \usepackage{caption}
 \usepackage{subcaption}
+\usepackage{url}
 \captionsetup[subfigure]{labelformat=empty}
 \captionsetup[figure]{labelformat=empty}
 
@@ -278,13 +279,13 @@ Milestones
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~THANK YOU
 \end{frame}
 
-%\begin{frame}[allowframebreaks]{Bibliography}
-%	\frametitle{References}
-%\bibliographystyle{plain}
-%\renewcommand\bibname{Selected Bibliography Including Cited Works}
-%\nocite{*}
-%\bibliography{biblio}
-%\end{frame}
+\begin{frame}[allowframebreaks]{Bibliography}
+	\frametitle{References}
+\bibliographystyle{plain}
+\renewcommand\bibname{Selected Bibliography Including Cited Works}
+\nocite{*}
+\bibliography{biblio}
+\end{frame}
 
 
 
