spelling error fixed

--- a/template 02 presentation/presentation.tex
+++ b/template 02 presentation/presentation.tex
@@ -206,7 +206,7 @@ Let $N$ be the population that claps, $I$ be intensity and $T$ be duration then 
 
 \begin{frame}
 \frametitle{Second Objective}
-The second objective is to integrate the indivual models to examine the behavior of the population.\newline \newline
+The second objective is to integrate the indivdual models to examine the behavior of the population.\newline \newline
 The critical mass/threshold needed to start a full-blown applause will be determined.
 \end{frame}
 
@@ -217,7 +217,7 @@ The simulation will be coded using Matlab with R documentation
 
 \begin{frame}
 \frametitle{Time Permitted}
-If time permits we will examine recordings of speeches, performances, etc. We will determine the average intensity of a clap.\\
+If time permits we will examine recordings of speeches, performances, etc. We will determine the average intensity of a clap.From there we can collect data and compare it to the model generated.\\
 \end{frame}
 
 \section{Milestones}
