--- a/template 05 homework/homeworkset1.tex
+++ b/template 05 homework/homeworkset1.tex
@@ -257,8 +257,8 @@ what exactly your question is.
 You may use the class discussion on this particular 
 problem, but you \emph{may not} directly refer to our 
 discussion.  Instead, formulate the model carefully but concisely in 
-your own words.   
-The first step to answer this question is to define what a tennis game. My model will be based on my perception of the rules of the tennis. I have to admit that I am not entirely clear on the details of the rules of tennis. My basic understanding is depicted in the diagram below:
+your own words.   \newline \newline
+The first step to answer this question is to define what a tennis game. My model will be based on my perception of the rules of the tennis. I have to admit that I am not entirely clear on the details of the rules of tennis. My basic understanding is depicted in the diagram below figure \ref{fig:tennis}: \newline 
 \begin{figure}[h]
     \begin{center}
         \includegraphics[width=\textwidth]{tennis.jpg}
@@ -267,6 +267,9 @@ The first step to answer this question is to define what a tennis game. My model
     \label{fig:tennis}
 \end{figure}
 \newline
+\newline 
+\newline 
+\newline 
 Based on this understanding, each game contains $N$ number of sets and each set contains $J$ number of matches.  I will define the question specifically to state “Is the game of tennis fair?” to “Does starting a match first give you an advantage in the greater scheme of one game?” If the answer is yes then the game is unfair. If it is no then the model is inconclusive, since it only answers one component of the game. The reason why I used starting first as the variable to test for is the fact that we do not have any power over the specific endogenous parameters such as player’s mood, psyche, skill, etc. I will assume that both players are the same in terms of skill level. In terms of exogenous variables like weather, crowd cheering, and other external factors that affect the game, I will ignore those as well for simplicity. 
 \newline
 I will assume that starting or serving first gives that player an advantage in the specific match. The players will also alternate who starts first for each match. To model the increased probability of winning a round, I will use an imbalanced coin model. In this game we have Player A and Player B. If Player A starts first the probability of A winning increases and the probability of B winning decreases. The exact numbers will not be determined for the probability and will be determined after experimentation. 
