figure problem fixed

--- a/template 05 homework/homeworkset1.tex
+++ b/template 05 homework/homeworkset1.tex
@@ -258,10 +258,10 @@ You may use the class discussion on this particular
 problem, but you \emph{may not} directly refer to our 
 discussion.  Instead, formulate the model carefully but concisely in 
 your own words.   \newline \newline
-The first step to answer this question is to define what a tennis game. My model will be based on my perception of the rules of the tennis. I have to admit that I am not entirely clear on the details of the rules of tennis. My basic understanding is depicted in the diagram below figure \ref{fig:tennis}: \newline 
+The first step to answer this question is to define what a tennis game. My model will be based on my perception of the rules of the tennis. I have to admit that I am not entirely clear on the details of the rules of tennis. My basic understanding is depicted in figure \ref{fig:tennis}: 
 \begin{figure}[h]
     \begin{center}
-        \includegraphics[width=\textwidth]{tennis.jpg}
+        \includegraphics{tennis.jpg}
     \end{center}
     \caption{My understanding of a tennis game}
     \label{fig:tennis}
