exogenous endogenous variable for problem 3

--- a/template 05 homework/homeworkset1.tex
+++ b/template 05 homework/homeworkset1.tex
@@ -224,7 +224,7 @@ Note also that in addition to this issue, there are other issues that
 you are to consider.  So, \emph{be sure to consult IMM}. 
 \paragraph {Proposal 1:}
 
- In this mechanism each student pushes their files onto their github.com account. Student B pulls from A and Student C pulls from B. Finally, Student D pulls from Student C. This allows for the files to merge without any additional copies being made. In addition, if the specific order is kept then the report will be in order and no further rearrangements will be required. 
+ In this mechanism each student pushes their files onto their github.com account. Student B pulls from A and Student C pulls from B. Finally, Student D pulls from Student C. This allows for the files to merge without any additional copies being made. In addition, if the specific order is kept then the report will be in order and no further rearrangements will be required. The exogenous variables include the amount of time it takes for each member to write up their parts, the actual strategy for merging, and the time it takes to merge. We can neglect the amount of time it takes to merge, the time it takes to merge and the quality of writing. The endogenous variable is the efficiency of the work strategy and the potential errors it produces. 
 \newline 
 \newline 
 There is much strength to this mechanism. First, when the files are pulled by each student they are in order. Second, the probability of getting extra copies is at a minimum. There are some weaknesses, however. First, each student must be finished with their segment of the report before the next student can pull the file. The fact that the transfer of files must be in that specific order also makes the process less flexible. For example, A must be done before B, B must be done before C and C must be done before D. Another problem occurs with editing. For example, say that A wanted to change something in their section of the report. According to the mechanism, all the students would have to redo the entire process. This takes time and effort.
@@ -234,7 +234,7 @@ To test this we can perform a short simulation. Since I am only one person, it i
  
 
 \paragraph {Proposal 2: }
-An alternative mechanism is to let each student “submit” their segment to a master directory.  The files are then merged and the conflict is resolved by any one of the students. To do this each student should have a branch. Since Student D is in charge of the “Deliverables” which is usually the last part of the report we will assign student the master directory. This is just case, but it does not have to be this way. If another student volunteers or if the team decides on someone else to be in charge of master directory that will work too. The point is that one person is in charge of resolving the merge conflicts at the end.
+An alternative mechanism is to let each student “submit” their segment to a master directory.  The files are then merged and the conflict is resolved by any one of the students. To do this each student should have a branch. Since Student D is in charge of the “Deliverables” which is usually the last part of the report we will assign student the master directory. This is just case, but it does not have to be this way. If another student volunteers or if the team decides on someone else to be in charge of master directory that will work too. The point is that one person is in charge of resolving the merge conflicts at the end.The exogenous variables include the amount of time it takes for each member to write up their parts, the actual strategy for merging, and the time it takes to merge. We can neglect the amount of time it takes to merge, the time it takes to merge and the quality of writing. The endogenous variable is the efficiency of the work strategy and the potential errors it produces. 
 \newline 
 \newline 
 There is much strength to this mechanism. First, only one student will resolve the merge conflicts and compile the documents. This saves time and effort.  Second, the probability of getting extra copies is at a minimum. Third, when it comes to editing it will not be as tedious to recompile and merge again. There are some weaknesses, however.  Because the merge conflicts are managed by one student, there is a chance that if an error occurs there it will not be fixed since there is no proofreading mechanism. Finally, a set deadline must be established or else each student can merge multiple versions which would lead to confusion. 
@@ -269,7 +269,7 @@ The first step to answer this question is to define what a tennis game. My model
 \newline
 \newline 
 \newline 
-\newline 
+
 Based on this understanding, each game contains $N$ number of sets and each set contains $J$ number of matches.  I will define the question specifically to state “Is the game of tennis fair?” to “Does starting a match first give you an advantage in the greater scheme of one game?” If the answer is yes then the game is unfair. If it is no then the model is inconclusive, since it only answers one component of the game. The reason why I used starting first as the variable to test for is the fact that we do not have any power over the specific endogenous parameters such as player’s mood, psyche, skill, etc. I will assume that both players are the same in terms of skill level. In terms of exogenous variables like weather, crowd cheering, and other external factors that affect the game, I will ignore those as well for simplicity. 
 \newline
 I will assume that starting or serving first gives that player an advantage in the specific match. The players will also alternate who starts first for each match. To model the increased probability of winning a round, I will use an imbalanced coin model. In this game we have Player A and Player B. If Player A starts first the probability of A winning increases and the probability of B winning decreases. The exact numbers will not be determined for the probability and will be determined after experimentation. 
