--- a/template 05 homework/homeworkset1.tex
+++ b/template 05 homework/homeworkset1.tex
@@ -270,15 +270,15 @@ The first step to answer this question is to define what a tennis game. My model
 \newline 
 \newline 
 
-Based on this understanding, each game contains $N$ number of sets and each set contains $J$ number of matches.  I will define the question specifically to state “Is the game of tennis fair?” to “Does starting a match first give you an advantage in the greater scheme of one game?” If the answer is yes then the game is unfair. If it is no then the model is inconclusive, since it only answers one component of the game. The reason why I used starting first as the variable to test for is the fact that we do not have any power over the specific endogenous parameters such as player’s mood, psyche, skill, etc. I will assume that both players are the same in terms of skill level. In terms of exogenous variables like weather, crowd cheering, and other external factors that affect the game, I will ignore those as well for simplicity. 
+Based on this understanding, each game contains $N$  sets and each set contains "$J$" matches.  I will define the question specifically to state “Is the game of tennis fair?” to “Does starting a match first give you an advantage in the greater scheme of one game?” If the answer is yes then the game is unfair. If it is no then the model is inconclusive, since it only answers one component of the game. The reason why I used starting first as the variable to test for is the fact that we do not have any power over the specific exogenous parameters such as player’s mood, psyche, skill, etc. I will assume that both players are the same in terms of skill level. Variables like weather, crowd cheering, and other external factors that affect the game, I will ignore those as well for simplicity. The endogenous variable we are solving for is the fairness of the game, in this case whether or not the probability of winning is biased. The main exogenous variable is who starts the game first. 
 \newline
 I will assume that starting or serving first gives that player an advantage in the specific match. The players will also alternate who starts first for each match. To model the increased probability of winning a round, I will use an imbalanced coin model. In this game we have Player A and Player B. If Player A starts first the probability of A winning increases and the probability of B winning decreases. The exact numbers will not be determined for the probability and will be determined after experimentation. 
 \newline
 Let us focus on Player A. To win, Player A needs to win the majority of sets to win the game. This is done by winning the majority of matches in each set. The number of matches and sets played is determined by the score. If Player A starts every time then Player A would have a greater chance of winning the game. We can use the following equation to determine whether or not a player has an advantage. If the ratio of probabilities of the Player A:  PlayerB winning is not equal to 1 then the game is biased. 
 \newline
- Ratio= P (Player A wins set $|$ starts first)$/$P(player B wins set $|$ starts first)$
+ Ratio= P (Player~A~wins~set~$|$~ starts~first)$/$P(Player~B~wins~set~$|$ ~starts~first)$
 \newline
- P(Player X wins  set | start first)$=$ P(greater side of biased coin)^n$ , where $n$ is the number of times Player X starts first\newline
+ P(Player~X~wins~set~| start~first)$=$ P(greater~side~of~biased~coin)^n$ , where $n$ is the number of times Player X starts first\newline
 \newline
 Because we are modeling the match using a biased coin, we find that the probability of winning a set for a single player is unaffected if the number of matches is even. This makes sense because Player A and B get the same advantage. However, if the number of matches is odd, then the player that starts first will gain a greater advantage, since that player will start first more times than the other player. The equation will not equal one. \newline
 \newline
